--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -16,7 +16,7 @@
     justify-content: center;
     padding-left: 30px;
     padding-bottom: 250px;
-    padding-top: 70px;
+    padding-top: 100px;
 }
 .featured--name{
     font-size: 60px;
@@ -71,4 +71,28 @@
     margin-top: 15px;
     font-size: 18px;
     color: #999;
+}
+
+@media (max-width: 760px){
+    .featured{
+        height: 90vh;
+    }
+    .featured--name{
+        font-size: 40px;
+    }
+    .featured--info{
+        font-size: 16px;
+    }
+    .featured--description{
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+    .featured--watchbutton,
+    .featured--mylistbutton{
+        font-size: 16px;
+    }
+    .featured--genres{
+        font-size: 14px;
+    }
 }
